# HyerEnrichment

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GRILLME.md  Makefile  README.md  RULE.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  .env.production.example  .env.staging.example  README.md  alembic.ini  hyrepath.db  pyproject.toml
backend/.e2e-results/: gmaps-create.json  gmaps-job-status.json  probe-enrichers.json  sync-enrich.json  tier2-report.json
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_baseline_schema.py  002_promote_json_to_jsonb.py  003_add_signals_table.py  64970cccdab8_add_progress_metadata_to_jobrecord.py
backend/app/: __init__.py  config.py  llm_router.py  main.py  models.py  multilogin.py  services.py
backend/app/clients/: email_verify.py  llm.py  multilogin.py  (+4 more)
backend/docker/: Dockerfile.api  Dockerfile.email-verifier  Dockerfile.google-maps-scraper  Dockerfile.multilogin  Dockerfile.social-analyzer  Dockerfile.worker  docker-compose.e2e-hostports.yml  docker-compose.fake-sidecars.yml  docker-compose.loadtest.yml  docker-compose.multilogin.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.tier-workers.yml  docker-compose.tier1.yml  docker-compose.yml  litellm_config.yaml
backend/docs/: ARCHITECTURE.md  LEGAL.md  LOAD_TESTING.md  TESTING_TIER1.md  TESTING_TIER234.md  env.staging.example  tier1_canary_set.example.json  tier234_canary_set.example.json
backend/hyrepath_enrichment_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: _diag_docker_tier1.sh  _diag_port_bind.sh  _diag_selenium_tcp.sh  _docker_disambiguation_test.sh  _e2e_litellm_disambiguate.py  _e2e_litellm_docker.sh  _llm_chat_req.json  _probe_enrich_disambiguation.py  _probe_gemini_disambiguation.py  _probe_gemini_models.py  _probe_launcher_once.py  _probe_litellm_chat.py  _probe_llm_disambiguation.py  _probe_ollama_disambiguation.py  _run_selenium_probe.sh  _run_tier1_windows_e2e.sh  _run_tier_c_check.sh  _smoke_sidecar_probe.py  _smoke_sync_enrich.py  _tier1_flush_and_rajshamani.sh  _tier1_live_rajshamani.sh  _tier1_probe_start.sh  _tier1_recreate_worker.sh  _tier1_scrape_once.sh  _tier1_scrape_upload_cache.sh  _tier1_selenium_probe.sh  _tier1_setup_common.py  _tier1_stop_and_recheck.sh  boundary_checks.sh  create_session.py  e2e_canary_tier234.sh  e2e_compose_test.sh  e2e_error_tracking.sh  e2e_fake_sidecars.py  e2e_fake_sidecars.sh  e2e_fake_sidecars_runner.py  e2e_full_path.sh  e2e_full_path_runner.py  e2e_langfuse.sh  e2e_realworld_strict.py  (+35 more)
backend/tests/: conftest.py  envelope_helpers.py  migration_helpers.py  test_adrs.py  test_alembic_migrations.py  test_api_envelopes.py  test_canary_sets.py  test_compliance_identifiers.py  test_create_session.py  test_db.py  test_disambiguation.py  test_dsar.py  test_e2e_tier1_canary.py  test_enrich_events_route.py  test_enrich_list.py  test_enrichers.py  test_error_tracking.py  test_fake_sidecar_server.py  test_gitrecon_throttle.py  test_health_alerts.py  test_health_ready.py  test_job_dedup.py  test_job_events.py  test_job_status_clarity.py  test_linkedin_browser.py  test_linkedin_slug.py  test_llm_provider.py  test_load_harness.py  test_multilogin_client.py  test_opt_out_compliance.py  test_photo_cache.py  test_pipeline_contracts.py  test_pipeline_shape.py  test_probe_enrichers_canary.py  test_prometheus_alert_rules.py  test_r2_storage.py  test_request_validation.py  test_run_canary_score.py  test_runner_hardening.py  test_signals_list.py  (+8 more)
(+325 files in other folders)
