[project]
name = "hyrepath-enrichment-backend"
version = "0.1.0"
description = "Production-ready enrichment backend for Hyrepath Enrichment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "aiosqlite>=0.20,<1.0",
  "httpx>=0.27,<1.0",
  "redis>=5.0,<6.0",
  "rq>=1.16,<2.0",
  "prometheus-client>=0.20,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "mypy>=1.10,<2.0",
  "ruff>=0.5,<1.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100

'target-version' = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
strict = false
ignore_missing_imports = true
