[project]
name = "hyrepath-enrichment-backend"
version = "0.1.0"
description = "Production-ready enrichment backend for Hyrepath Enrichment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "aiosqlite>=0.20,<1.0",
  "asyncpg>=0.29,<1.0",
  "psycopg[binary]>=3.1,<4.0",
  "httpx>=0.27,<1.0",
  "redis>=5.0,<6.0",
  "rq>=1.16,<3.0",
  "prometheus-client>=0.20,<1.0",
  "mailchecker>=6.0,<7.0",
  "sentry-sdk[fastapi]>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-asyncio>=1.0,<2.0",
  "pytest-cov>=5.0,<8.0",
  "mypy>=1.10,<3.0",
  "ruff>=0.5,<1.0",
  # LinkedIn unit tests import selenium-backed modules at collection time
  "selenium>=4.21,<5.0",
  "requests>=2.31,<3.0",
  "pip-audit>=2.7,<3.0",
  "pre-commit>=3.7,<4.0",
]
# Real enricher backends (Phase 1/2/3). All are lazily imported / shelled out
# so the app degrades gracefully when a tool is absent; install for production.
enrichers = [
  "dnspython>=2.6,<3.0",
  "playwright>=1.50.0,<2.0",
  "greenlet>=3.1.1,<4.0",
  "python-jobspy>=1.1,<2.0",
  "selenium>=4.21,<5.0",
  "aioboto3>=13.0,<16.0",
  # Tier 2 CLIs (sherlock / maigret entry points on PATH)
  "sherlock-project>=0.16.0,<0.17",
  "maigret>=0.6.2,<0.7",
  # Tier 3 — CrossLinked installed from GitHub fork in Dockerfiles (Yahoo search)
  # theHarvester is installed from GitHub in Dockerfiles
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
  "postgres: requires TEST_DATABASE_URL pointing at PostgreSQL",
]

[tool.ruff]
line-length = 100

'target-version' = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
strict = true
# Prefer per-module overrides below over a blanket ignore_missing_imports.
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
  "redis.*",
  "rq.*",
  "aioboto3.*",
  "selenium.*",
  "jobspy.*",
  "dns.*",
  "playwright.*",
  "langfuse",
  "MailChecker",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 78
show_missing = true
skip_empty = true
